--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node serveur.js"
+    "start": "node api/serveur.js"
   },
   "keywords": [],
   "author": "Ashwinia Yogarajah",
